# advent-of-code-rs

./: Cargo.toml  README.md
src/: cmd.rs  main.rs  puzzle.rs  template.rs
src/year_2015/: day_1.rs
src/year_2023/: day_1.rs  day_2.rs  mod.rs
