[package]
name = "advent-of-code-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bounded-integer = { version = "0.5.7", features = ["types", "std"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.8", features = ["derive"] }
dotenvy = "0.15.7"
num-traits = "0.2.17"
reqwest = { version = "0.11.22", default-features = false, features = [
    "default-tls",
    "blocking",
] }
scraper = { version = "0.18.1", default-features = false }
thousands = "0.2.0"
